--- a/views/login.ejs
+++ b/views/login.ejs
@@ -14,5 +14,8 @@
 </form>
 <p>
   <a href="/signup">Create an Account &rarr;</a>
+  <br>
   <a href="/auth/github">Login with Github &rarr;</a>
+  <br>
+  <a href="/auth/facebook">Login with Facebook! &rarr;</a>
 <p>
